# QueryX-Engine

./: .gitignore  CLAUDE.md  DESIGN.md  INTERVIEW.md  PRESENTATION.md  README.md  RESUME.md  SHOWCASE.md  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: REPORT.md  benchmark_suite.py  index_benchmark.py
examples/: crash_recovery_demo.py  index_vs_seqscan_demo.py  sample_queries.sql
queryx/: __init__.py  __main__.py  catalog.py  database.py  shell.py
queryx/execution/: __init__.py  operators.py
queryx/index/: __init__.py  btree.py  hash_index.py
queryx/planner/: __init__.py  advisor.py  explain.py  optimizer.py  statistics.py
queryx/sql/: __init__.py  ast.py  lexer.py  parser.py  tokens.py
queryx/storage/: __init__.py  buffer_pool.py  heap_file.py  page.py  pager.py
queryx/wal/: __init__.py  log.py  recovery.py
tests/: test_adaptive_indexing.py  test_benchmarks.py  test_catalog.py  test_database.py  test_group_by.py  test_join.py  test_optimizer_integration.py  test_shell.py  test_skeleton.py
tests/execution/: test_operators.py
tests/index/: test_btree.py  test_hash_index.py
tests/planner/: test_optimizer.py
tests/sql/: test_lexer.py  test_parser.py
tests/storage/: test_buffer_pool.py  test_heap_file.py  test_page.py  test_pager.py
tests/wal/: test_wal.py
