[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "queryx"
version = "0.1.0"
description = "A relational database engine built from scratch in Python — pages, B+ tree/hash indexes, SQL parser, volcano execution, cost-based optimizer, and WAL crash recovery."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "QueryX" }]
keywords = ["database", "btree", "sql", "storage-engine", "query-optimizer", "wal"]

# Core engine logic uses the standard library ONLY (no ORM, no database
# libraries — we are building the database). Third-party deps are confined to
# the test and benchmark tooling below.
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]
bench = ["matplotlib>=3.8"]
dev = ["pytest>=8.0", "matplotlib>=3.8", "mypy>=1.8"]

[tool.setuptools.packages.find]
include = ["queryx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
